apps/web/base/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.33.2-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: web
  ports:
    - targetPort: 3000
      port: 3000
